src/objects/QPMS__SupplierHistory__c.object
<CustomObject>
    <description>This is a common object for all object  History(audit module)</description>
    <fields>
        <fullName>QPMS__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supplier History</relationshipLabel>
        <relationshipName>Supplier_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ActionStatus__c</fullName>
        <defaultValue>&apos;Updated&apos;</defaultValue>
        <description>This field is for to display the action values like Created,Updated,Deleted in Audittrail</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to display the action values like Created,Updated,Deleted</description>
        <inlineHelpText>to display the action values like Created,Updated,Deleted</inlineHelpText>
        <label>Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Attachment_Id__c</fullName>
        <description>This field is used to save attachment name</description>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>To save the description of the filed</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__FieldApiName__c</fullName>
        <description>To save api name of the field</description>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldName__c</fullName>
        <description>To save the filed name</description>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__HistoryObject__c</fullName>
        <description>To differentiate the history object</description>
        <label>HistoryObject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier Change</fullName>
                </value>
                <value>
                    <fullName>Supplier Profile</fullName>
                </value>
                <value>
                    <fullName>Supplier Checklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Last_ModifiedBy__c</fullName>
        <description>To save the last modified by user</description>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last ModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NewValue__c</fullName>
        <description>To save new value in history object</description>
        <label>NewValue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Value__c</fullName>
        <description>This is for to show the history data</description>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Object__c</fullName>
        <description>To save the object name</description>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__OldValue__c</fullName>
        <description>To save the old value</description>
        <label>OldValue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Old_Valiue__c</fullName>
        <description>This is for to store history old data</description>
        <label>Old Valiue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent__c</fullName>
        <description>To save related object</description>
        <label>Sub Parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier Init</fullName>
                </value>
                <value>
                    <fullName>Supplier Part or Service</fullName>
                </value>
                <value>
                    <fullName>Supplier Contact</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>AuditInformation</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
                <value>
                    <fullName>AdhocTask</fullName>
                </value>
                <value>
                    <fullName>Supplier Profile</fullName>
                </value>
                <value>
                    <fullName>Interviewed Personnel</fullName>
                </value>
                <value>
                    <fullName>QuestionnaireForSupplierChange</fullName>
                </value>
                <value>
                    <fullName>Supplier Address</fullName>
                </value>
                <value>
                    <fullName>Supplier Change Owner</fullName>
                </value>
                <value>
                    <fullName>Supplier Change Duedate</fullName>
                </value>
                <value>
                    <fullName>Supplier Approval</fullName>
                </value>
                <value>
                    <fullName>Final Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier Change</description>
        <label>Supplier Change</label>
        <referenceTo>QPMS__Supplier_Change__c</referenceTo>
        <relationshipLabel>Supplier History</relationshipLabel>
        <relationshipName>Supplier_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier Checklist</description>
        <label>Supplier Checklist</label>
        <referenceTo>QPMS__Supplier_Checklist__c</referenceTo>
        <relationshipLabel>Supplier History</relationshipLabel>
        <relationshipName>Supplier_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier Profile</description>
        <label>Supplier Profile</label>
        <referenceTo>QPMS__Supplier_Profile__c</referenceTo>
        <relationshipLabel>Supplier History</relationshipLabel>
        <relationshipName>Supplier_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is for to show the value is created/updated</description>
        <label>Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check record deleted or not</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Supplier History</label>
    <nameField>
        <displayFormat>SH-{00000}</displayFormat>
        <label>Supplier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>